--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_stripe: ^11.4.0
+  flutter_bloc: ^9.1.0
+  flutterflow_ui: ^0.3.1
+  rive: ^0.12.4
+  flutter_launcher_icons: ^0.14.3
+  go_router: ^14.8.1
+  http: ^1.3.0
+  dio: ^5.8.0+1
+  cached_network_image: ^3.4.0
+  json_annotation: ^4.9.0
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.2.0
+  mockito: ^5.4.5
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +58,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  json_serializable: ^6.9.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
