--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_stripe: ^11.4.0
   flutter_bloc: ^9.1.0
-  flutterflow_ui: ^0.3.1
+  flutterflow_ui: ^0.1.0+4
   rive: ^0.12.4
   flutter_launcher_icons: ^0.14.3
   go_router: ^14.8.1
